# StandardE2E

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  THIRD_PARTY_NOTICES.txt  pyproject.toml  pyproject.toml.extra  pytest.ini  setup.cfg
.github/: CODEOWNERS
.github/workflows/: security.yml  tests.yml
configs/: base.yaml  comma2k19.yaml  kitscenes_longtail.yaml  kitscenes_multimodal.yaml  multi_dataset_with_lidar_and_hdmap.yaml  natix_edgecase.yaml  natix_multicam.yaml  nuscenes.yaml  perception.yaml  surround.yaml  truckdrive.yaml  vod.yaml
docs/: Makefile  README.md  conf.py  datasets.rst  index.rst  overview.rst  preprocessing_performance.rst  quickstart.rst  requirements.txt  user_guide.rst
docs/reference/: api.rst  augmentation.rst  caching.rst  caching_adapters.rst  caching_core.rst  caching_segment_context.rst  caching_src_datasets.rst  constants.rst  containers.rst  data_structures.rst  dataset_utils.rst  enums.rst  indexing.rst  modality_defaults.rst  unified_dataset.rst  utils.rst
examples/: creating_unified_dataloader.py  dataset_preprocessing.py  multi_dataset_with_lidar_and_hdmap.py  very_simple_training.py  waymo_perception_preprocessing.py
notebooks/: containers.ipynb  creating_custom_adapter.ipynb  intro_tutorial.ipynb  multi_dataset_training_and_filtering.ipynb
scripts/: extract_kitscenes.sh  extract_nuscenes.sh  extract_truckdrive.sh  extract_vod.sh  prepare_dataset_av2_sensor.sh  prepare_dataset_comma2k19.sh  prepare_dataset_kitscenes_longtail.sh  prepare_dataset_kitscenes_multimodal.sh  prepare_dataset_natix_edgecase.sh  prepare_dataset_natix_multicam.sh  prepare_dataset_nuscenes.sh  prepare_dataset_truckdrive.sh  prepare_dataset_vod.sh  prepare_datasets_waymo_e2e_perception.sh  render_frame.py
standard_e2e/: __init__.py  constants.py  enums.py  unified_dataset.py
standard_e2e/caching/: __init__.py  process_source_dataset.py  source_dataset_converter.py  source_dataset_processor.py
standard_e2e/data_structures/: __init__.py  containers.py  frame_data.py  trajectory_data.py
standard_e2e/dataset_utils/: frame_loader.py
standard_e2e/indexing/: __init__.py  index_data_generator.py
standard_e2e/utils/: __init__.py  common.py  geometry.py  hd_map.py  image_utils.py  waymo_lidar.py  waymo_lidar_numpy.py
standard_e2e/visualization/: __init__.py  render.py  visualize_processed.py
tests/: test_adapters.py  test_batched_lidar.py  test_collate_dict_passthrough.py  test_colmap_io.py  test_containers.py  test_frame_data.py  test_frame_data_field_enum.py  test_frames_batch_data.py  test_geometry.py  test_hd_map_containers.py  test_hd_map_crop.py  test_indexing.py  test_lidar_point_cloud.py  test_lidar_scaffold.py  test_modality_defaults.py  test_no_tensorflow_leak.py  test_public_api.py  test_selector.py  test_surround_cameras.py  test_trajectory_data.py  test_visualization.py  test_waymo_lidar.py  test_waymo_lidar_numpy.py
tests/context_aggregators/: test_future_detections.py  test_future_past_states_from_matrices.py  test_hd_map_ego_crop_aggregator.py  test_segment_context_aggregator_base.py
tests/dataset_processors/: test_av2_enum_coverage.py  test_av2_lidar_dataset_processor.py  test_av2_sensor_dataset_processor.py  test_comma2k19_dataset_processor.py  test_kitscenes_longtail_dataset_processor.py  test_kitscenes_multimodal_dataset_processor.py  test_natix_edgecase_dataset_processor.py  test_natix_multicam_dataset_processor.py  test_navsim_dataset_processor.py  test_nuscenes_dataset_processor.py  test_processor_extra_kwargs.py  test_source_dataset_processor.py  test_truckdrive_dataset_processor.py  test_vod_dataset_processor.py  test_waymo_e2e_dataset_processor.py  test_waymo_perception_dataset_processor.py  test_waymo_perception_hd_map_aggregator.py  test_waymo_perception_hd_map_parser.py  test_wayve_scenes_dataset_processor.py
tests/integration/: _render_assertions.py  conftest.py  test_cross_dataset_parity.py  test_e2e_roundtrip.py  test_gpu_forward_smoke.py  test_perception_roundtrip.py  test_perception_scale_determinism.py  (+3 more)
(+97 files in other folders)
